# Flask-Yolov5

./: .env.example  .gitignore  README.md  detect.py  main.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt
models_custom/: best_v5n.pt
utils/: general.py  plots.py
