[tool.poetry]
name = "app-drown"
version = "0.1.0"
description = "A simple CLI to check if a password has been pwned"
authors = ["asrop"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"